--- a/index.html
+++ b/index.html
@@ -181,20 +181,14 @@ footer a { color:#1976d2; text-decoration:none; }
 </section>
 
 <!-- Video Lessons Section -->
+<!-- Video Lessons Section -->
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList">
-    <!-- مثال على فيديو -->
-    <div class="videoBox">
-      <h3>Lesson 1: Greetings</h3>
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
-    </div>
-    <div class="videoBox">
-      <h3>Lesson 2: Daily Conversations</h3>
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
-    </div>
+    <!-- الفيديوهات ستظهر هنا ديناميكيًا من localStorage -->
   </div>
 </section>
+
 
 <!-- PDF Section -->
 <section id="pdfs">
@@ -302,6 +296,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
