--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer a { color:#1976d2; text-decoration:none; }
 
   <!-- الفورم لإضافة الفيديو -->
   <div id="videoForm">
-      <input type="text" id="videoTitle" placeholder="Lesson 01:">
+      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
       <input type="text" id="videoURL" placeholder="رابط YouTube">
       <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
@@ -296,6 +296,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
