--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -7,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
+/* تعيين الصفر لكل الهوامش والحشو */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -18,7 +17,7 @@ body {
   min-height:100vh;
 }
 
-/* Sidebar */
+/* القائمة الجانبية */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
@@ -31,7 +30,13 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
+.sidebar h2 { 
+  color:#1976d2; 
+  margin-bottom:20px; 
+  font-size:1.6rem; 
+  border-bottom:2px solid #1976d2; 
+  padding-bottom:5px; 
+}
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
 .sidebar button { 
@@ -46,10 +51,10 @@ body {
   font-weight:bold;
 }
 
-/* Main content */
+/* المحتوى الرئيسي */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
-/* Header */
+/* الهيدر */
 header {
   display:flex;
   align-items:center;
@@ -82,22 +87,52 @@ header div p {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
-/* Sections */
+/* الأقسام */
 section { margin-bottom:50px; }
-section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
+section h2 { 
+  color: #1976d2; 
+  margin-bottom:20px; 
+  font-size:1.8rem; 
+  border-bottom: 2px solid #1976d2; 
+  display:inline-block; 
+  padding-bottom:4px; 
+}
 
-/* Video Lessons */
-.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
+/* Video Lessons Section - تحسين عرض الفيديوهات */
+.videos { 
+  display: grid; 
+  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); /* جعل الشبكة مرنة */
+  gap:25px; 
+}
+
 .videoBox {
   background: #e3f2fd;
   padding:15px;
   border-radius:12px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+  display: flex;                /* استخدام flex لتوزيع المحتوى عموديًا */
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   text-align:center;
-  position:relative;
+  position: relative;
+  height: 320px;                /* ارتفاع موحد لكل صندوق */
 }
-.videoBox h3 { color:#0d47a1; margin-bottom:10px; font-size:1.1rem; }
-.videoBox iframe { width:100%; height:200px; border-radius:10px; }
+
+.videoBox h3 { 
+  color:#0d47a1; 
+  margin-bottom:10px; 
+  font-size:1.1rem; 
+  height: 40px;                  /* ارتفاع ثابت للعنوان لمنع اختلاف الصفوف */
+  overflow: hidden;              /* منع تجاوز النص للصندوق */
+}
+
+.videoBox iframe { 
+  width:100%; 
+  height:200px; 
+  border-radius:10px; 
+  flex-shrink: 0;                /* منع تصغير iframe */
+}
 
 /* زر حذف الفيديو */
 .deleteBtn {
@@ -181,14 +216,12 @@ footer a { color:#1976d2; text-decoration:none; }
 </section>
 
 <!-- Video Lessons Section -->
-<!-- Video Lessons Section -->
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList">
     <!-- الفيديوهات ستظهر هنا ديناميكيًا من localStorage -->
   </div>
 </section>
-
 
 <!-- PDF Section -->
 <section id="pdfs">
@@ -296,6 +329,8 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
 
 
 
