--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
-/* تعيين الصفر لكل الهوامش والحشو */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -17,7 +16,7 @@ body {
   min-height:100vh;
 }
 
-/* القائمة الجانبية */
+/* Sidebar */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
@@ -30,13 +29,7 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-.sidebar h2 { 
-  color:#1976d2; 
-  margin-bottom:20px; 
-  font-size:1.6rem; 
-  border-bottom:2px solid #1976d2; 
-  padding-bottom:5px; 
-}
+.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
 .sidebar button { 
@@ -51,10 +44,10 @@ body {
   font-weight:bold;
 }
 
-/* المحتوى الرئيسي */
+/* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
-/* الهيدر */
+/* Header */
 header {
   display:flex;
   align-items:center;
@@ -87,52 +80,27 @@ header div p {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
-/* الأقسام */
+/* Sections */
 section { margin-bottom:50px; }
-section h2 { 
-  color: #1976d2; 
-  margin-bottom:20px; 
-  font-size:1.8rem; 
-  border-bottom: 2px solid #1976d2; 
-  display:inline-block; 
-  padding-bottom:4px; 
-}
+section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
-/* Video Lessons Section - تحسين عرض الفيديوهات */
-.videos { 
-  display: grid; 
-  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); /* جعل الشبكة مرنة */
-  gap:25px; 
-}
-
+/* Video Lessons Grid */
+.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .videoBox {
   background: #e3f2fd;
   padding:15px;
   border-radius:12px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  display: flex;                /* استخدام flex لتوزيع المحتوى عموديًا */
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   text-align:center;
-  position: relative;
-  height: 320px;                /* ارتفاع موحد لكل صندوق */
+  position:relative;
 }
-
-.videoBox h3 { 
+.videoBox h5 { 
   color:#0d47a1; 
-  margin-bottom:10px; 
-  font-size:1.1rem; 
-  height: 40px;                  /* ارتفاع ثابت للعنوان لمنع اختلاف الصفوف */
-  overflow: hidden;              /* منع تجاوز النص للصندوق */
+  margin-bottom:8px; 
+  font-size:0.95rem; /* تصغير الخط لتظهر العناوين كاملة */
+  text-align:center;
 }
-
-.videoBox iframe { 
-  width:100%; 
-  height:200px; 
-  border-radius:10px; 
-  flex-shrink: 0;                /* منع تصغير iframe */
-}
+.videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
 /* زر حذف الفيديو */
 .deleteBtn {
@@ -148,7 +116,7 @@ section h2 {
   display:none; /* يظهر فقط للادمن */
 }
 
-/* PDF Resources */
+/* PDF Section */
 .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
 .pdfBox {
   background: #d0e8ff;
@@ -271,7 +239,7 @@ function createVideoElement(video){
   const box = document.createElement('div');
   box.classList.add('videoBox');
   box.innerHTML = `
-    <h3>${video.title}</h3>
+    <h5>${video.title}</h5>
     <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
     <button class="deleteBtn">حذف الفيديو</button>
   `;
@@ -329,6 +297,8 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
 
 
 
