--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@ header div p {
 section { margin-bottom:50px; }
 section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
-/* Video Lessons Grid */
-.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
+/* Video Lessons */
+.videos { 
+  display: grid; 
+  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); 
+  gap:25px; 
+}
 .videoBox {
   background: #e3f2fd;
   padding:15px;
@@ -93,14 +97,27 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
   text-align:center;
   position:relative;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-start;
+  min-height:250px; /* ارتفاع افتراضي */
 }
 .videoBox h5 { 
   color:#0d47a1; 
   margin-bottom:8px; 
-  font-size:0.95rem; /* تصغير الخط لتظهر العناوين كاملة */
+  font-size:1rem; 
   text-align:center;
+  overflow:hidden;
+  display:-webkit-box;
+  -webkit-line-clamp:2; 
+  -webkit-box-orient:vertical;
+  word-break:break-word;
 }
-.videoBox iframe { width:100%; height:200px; border-radius:10px; }
+.videoBox iframe { 
+  width:100%; 
+  border-radius:10px; 
+  margin-top:auto; /* يبقي الفيديو أسفل العنوان */
+}
 
 /* زر حذف الفيديو */
 .deleteBtn {
@@ -116,7 +133,7 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   display:none; /* يظهر فقط للادمن */
 }
 
-/* PDF Section */
+/* PDF Resources */
 .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
 .pdfBox {
   background: #d0e8ff;
@@ -217,13 +234,13 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- Script لإضافة الفيديوهات مباشرة -->
+<!-- Script لإضافة الفيديوهات -->
 <script>
 // كلمة مرور للادمن
 const PASSWORD = "1234";
 let isAdmin = false;
 
-// العناصر المتعلقة بالفورم
+// عناصر الفورم والفيديوهات
 const showFormBtn = document.getElementById('showFormBtn');
 const videoForm = document.getElementById('videoForm');
 const addVideoBtn = document.getElementById('addVideoBtn');
@@ -231,20 +248,23 @@ const videoTitleInput = document.getElementById('videoTitle');
 const videoURLInput = document.getElementById('videoURL');
 const videoList = document.getElementById('videoList');
 
-// جلب الفيديوهات المحفوظة من localStorage
+// جلب الفيديوهات من localStorage
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
 
-// دالة لإنشاء عنصر الفيديو
+// دالة إنشاء عنصر الفيديو مع ضبط ارتفاع الفيديو ديناميكيًا
 function createVideoElement(video){
   const box = document.createElement('div');
   box.classList.add('videoBox');
+
   box.innerHTML = `
     <h5>${video.title}</h5>
     <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
     <button class="deleteBtn">حذف الفيديو</button>
   `;
+
   const deleteBtn = box.querySelector('.deleteBtn');
   if(isAdmin) deleteBtn.style.display = "block";
+
   deleteBtn.addEventListener('click', () => {
     if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
       box.remove();
@@ -252,6 +272,15 @@ function createVideoElement(video){
       localStorage.setItem('videos', JSON.stringify(videos));
     }
   });
+
+  // ضبط ارتفاع الصندوق حسب طول العنوان والفيديو
+  const title = box.querySelector('h5');
+  const iframe = box.querySelector('iframe');
+  setTimeout(() => {
+    const titleHeight = title.offsetHeight;
+    iframe.style.height = `${200 + titleHeight - 28}px`; // 28px هو الفارق بين ارتفاع h5 الافتراضي وارتفاع iframe الافتراضي
+  }, 10);
+
   videoList.appendChild(box);
 }
 
@@ -297,6 +326,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
