--- a/index.html
+++ b/index.html
@@ -150,6 +150,49 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
 footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
 footer a { color:#1976d2; text-decoration:none; }
 
+/* Video Lessons */
+.videos { 
+  display: grid; 
+  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); 
+  gap:25px; 
+}
+.videoBox {
+  background: #e3f2fd;
+  padding:15px;
+  border-radius:12px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+  text-align:center;
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-start;
+  min-height:250px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* التحريك عند hover */
+}
+.videoBox h5 { 
+  color:#0d47a1; 
+  margin-bottom:8px; 
+  font-size:1rem; 
+  text-align:center;
+  overflow:hidden;
+  display:-webkit-box;
+  -webkit-line-clamp:2; 
+  -webkit-box-orient:vertical;
+  word-break:break-word;
+}
+.videoBox iframe { 
+  width:100%; 
+  border-radius:10px; 
+  margin-top:auto;
+}
+
+/* Hover effect للفيديو */
+.videoBox:hover {
+  transform: translateY(-6px); /* حركة بسيطة للأعلى */
+  box-shadow: 0 12px 25px rgba(0,0,0,0.25); /* ظل أكبر وأكثر وضوحًا */
+}
+
+  
 /* Form لإضافة فيديو */
 #videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
 #videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
@@ -326,6 +369,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
