--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -85,11 +86,7 @@ section { margin-bottom:50px; }
 section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
 /* Video Lessons */
-.videos { 
-  display: grid; 
-  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); 
-  gap:25px; 
-}
+.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .videoBox {
   background: #e3f2fd;
   padding:15px;
@@ -97,27 +94,14 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
   text-align:center;
   position:relative;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-start;
-  min-height:250px; /* ارتفاع افتراضي */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.videoBox h5 { 
-  color:#0d47a1; 
-  margin-bottom:8px; 
-  font-size:1rem; 
-  text-align:center;
-  overflow:hidden;
-  display:-webkit-box;
-  -webkit-line-clamp:2; 
-  -webkit-box-orient:vertical;
-  word-break:break-word;
+.videoBox:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 12px 25px rgba(0,0,0,0.2);
 }
-.videoBox iframe { 
-  width:100%; 
-  border-radius:10px; 
-  margin-top:auto; /* يبقي الفيديو أسفل العنوان */
-}
+.videoBox h5 { color:#0d47a1; margin-bottom:10px; font-size:1rem; }
+.videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
 /* زر حذف الفيديو */
 .deleteBtn {
@@ -150,53 +134,25 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
 footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* Video Lessons */
-.videos { 
-  display: grid; 
-  grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); 
-  gap:25px; 
-}
-.videoBox {
-  background: #e3f2fd;
-  padding:15px;
-  border-radius:12px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  text-align:center;
-  position:relative;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-start;
-  min-height:250px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* التحريك عند hover */
-}
-.videoBox h5 { 
-  color:#0d47a1; 
-  margin-bottom:8px; 
-  font-size:1rem; 
-  text-align:center;
-  overflow:hidden;
-  display:-webkit-box;
-  -webkit-line-clamp:2; 
-  -webkit-box-orient:vertical;
-  word-break:break-word;
-}
-.videoBox iframe { 
-  width:100%; 
-  border-radius:10px; 
-  margin-top:auto;
-}
-
-/* Hover effect للفيديو */
-.videoBox:hover {
-  transform: translateY(-6px); /* حركة بسيطة للأعلى */
-  box-shadow: 0 12px 25px rgba(0,0,0,0.25); /* ظل أكبر وأكثر وضوحًا */
-}
-
-  
 /* Form لإضافة فيديو */
 #videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
 #videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
 #videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
+
+/* زر Load More */
+#loadMoreBtn {
+  display:block;
+  margin:20px auto;
+  padding:10px 15px;
+  border:none;
+  background:#0d47a1;
+  color:#fff;
+  border-radius:6px;
+  cursor:pointer;
+  font-weight:bold;
+  transition: background 0.3s;
+}
+#loadMoreBtn:hover { background:#1976d2; }
 
 /* Responsive */
 @media(max-width:992px){
@@ -246,9 +202,8 @@ footer a { color:#1976d2; text-decoration:none; }
 <!-- Video Lessons Section -->
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos" id="videoList">
-    <!-- الفيديوهات ستظهر هنا ديناميكيًا من localStorage -->
-  </div>
+  <div class="videos" id="videoList"></div>
+  <button id="loadMoreBtn">Load More</button>
 </section>
 
 <!-- PDF Section -->
@@ -277,37 +232,38 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- Script لإضافة الفيديوهات -->
 <script>
 // كلمة مرور للادمن
 const PASSWORD = "1234";
 let isAdmin = false;
 
-// عناصر الفورم والفيديوهات
+// العناصر المتعلقة بالفورم
 const showFormBtn = document.getElementById('showFormBtn');
 const videoForm = document.getElementById('videoForm');
 const addVideoBtn = document.getElementById('addVideoBtn');
 const videoTitleInput = document.getElementById('videoTitle');
 const videoURLInput = document.getElementById('videoURL');
 const videoList = document.getElementById('videoList');
+const loadMoreBtn = document.getElementById('loadMoreBtn');
 
-// جلب الفيديوهات من localStorage
+// جلب الفيديوهات المحفوظة من localStorage
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
 
-// دالة إنشاء عنصر الفيديو مع ضبط ارتفاع الفيديو ديناميكيًا
+// عدد الفيديوهات المعروضة حاليًا
+let displayedCount = 0;
+const batchSize = 6; // عدد الفيديوهات المراد عرضها في البداية
+
+// دالة لإنشاء عنصر الفيديو
 function createVideoElement(video){
   const box = document.createElement('div');
   box.classList.add('videoBox');
-
   box.innerHTML = `
     <h5>${video.title}</h5>
     <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
     <button class="deleteBtn">حذف الفيديو</button>
   `;
-
   const deleteBtn = box.querySelector('.deleteBtn');
   if(isAdmin) deleteBtn.style.display = "block";
-
   deleteBtn.addEventListener('click', () => {
     if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
       box.remove();
@@ -315,20 +271,25 @@ function createVideoElement(video){
       localStorage.setItem('videos', JSON.stringify(videos));
     }
   });
-
-  // ضبط ارتفاع الصندوق حسب طول العنوان والفيديو
-  const title = box.querySelector('h5');
-  const iframe = box.querySelector('iframe');
-  setTimeout(() => {
-    const titleHeight = title.offsetHeight;
-    iframe.style.height = `${200 + titleHeight - 28}px`; // 28px هو الفارق بين ارتفاع h5 الافتراضي وارتفاع iframe الافتراضي
-  }, 10);
-
-  videoList.appendChild(box);
+  return box;
 }
 
-// إنشاء الفيديوهات المحفوظة عند تحميل الصفحة
-videos.forEach(v => createVideoElement(v));
+// دالة لعرض الفيديوهات حسب batchSize
+function displayVideos() {
+  const remaining = videos.slice(displayedCount, displayedCount + batchSize);
+  remaining.forEach(v => videoList.appendChild(createVideoElement(v)));
+  displayedCount += remaining.length;
+  // إخفاء زر Load More إذا تم عرض جميع الفيديوهات
+  if(displayedCount >= videos.length){
+    loadMoreBtn.style.display = "none";
+  }
+}
+
+// إنشاء الفيديوهات المعروضة عند تحميل الصفحة
+displayVideos();
+
+// زر Load More
+loadMoreBtn.addEventListener('click', displayVideos);
 
 // عرض الفورم عند الضغط على زر إضافة فيديو
 showFormBtn.addEventListener('click', () => {
@@ -360,7 +321,11 @@ addVideoBtn.addEventListener('click', () => {
   videos.push(newVideo);
   localStorage.setItem('videos', JSON.stringify(videos));
 
-  createVideoElement(newVideo);
+  // إذا كان عدد الفيديوهات المعروضة أقل من batchSize، اعرضه مباشرة
+  if(displayedCount < batchSize){
+    videoList.appendChild(createVideoElement(newVideo));
+    displayedCount++;
+  }
 
   videoTitleInput.value = "";
   videoURLInput.value = "";
