--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   transform: translateY(-5px);
   box-shadow: 0 12px 25px rgba(0,0,0,0.2);
 }
-.videoBox h6 { color:#0d47a1; margin-bottom:10px; font-size:1rem; }
+.videoBox h6 { 
+  color:#0d47a1; 
+  margin-bottom:10px; 
+  font-size:0.85rem; /* حجم أصغر للعناوين */
+  word-break: break-word; /* لتجنب تداخل النص */
+}
+
 .videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
 /* أزرار تعديل وحذف الفيديو أسفل الفيديو */
@@ -324,6 +330,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
