--- a/index.html
+++ b/index.html
@@ -85,36 +85,27 @@ section { margin-bottom:50px; }
 section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
 /* Video Lessons */
-.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
+.videos { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:40px; }
+.videoTitle { font-size:0.9rem; color:#0d47a1; text-align:center; margin-bottom:5px; }
 .videoBox {
   background: #e3f2fd;
-  padding:15px;
+  padding:0;
   border-radius:12px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  text-align:center;
-  position:relative;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .videoBox:hover {
   transform: translateY(-5px);
   box-shadow: 0 12px 25px rgba(0,0,0,0.2);
 }
-.videoBox h6 {
-  color:#0d47a1;
-  margin-bottom:10px;
-  font-size:0.9rem;
-  pointer-events:none; /* يمنع الضغط على العنوان */
-}
-
-/* iframe */
 .videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
-/* أزرار الحذف والتعديل (يظهر فقط للادمن) */
+/* Admin Buttons */
 .videoButtons {
   display:flex;
   justify-content:center;
   gap:10px;
-  margin-top:10px;
+  margin-top:5px;
 }
 .videoButtons button {
   padding:5px 10px;
@@ -206,14 +197,12 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>This website teaches <strong>Egyptian Spoken Arabic</strong> through videos and downloadable PDFs. Simple and practical learning for everyone.</p>
 </section>
 
-<!-- Video Lessons Section -->
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList"></div>
   <button id="loadMoreBtn">Load More</button>
 </section>
 
-<!-- PDF Section -->
 <section id="pdfs">
   <h2>Downloadable PDFs</h2>
   <div class="resources">
@@ -252,27 +241,28 @@ const videoList = document.getElementById('videoList');
 const loadMoreBtn = document.getElementById('loadMoreBtn');
 
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
-
-// عدد الفيديوهات التي تظهر في البداية
 let visibleCount = 6;
 
 // دالة لإنشاء عنصر الفيديو
 function createVideoElement(video, index) {
+  const container = document.createElement('div');
+
+  // العنوان خارج الصندوق
+  const title = document.createElement('div');
+  title.classList.add('videoTitle');
+  title.textContent = video.title;
+  container.appendChild(title);
+
+  // الصندوق يحتوي فقط على iframe
   const box = document.createElement('div');
   box.classList.add('videoBox');
-  box.dataset.index = index;
-
-  // العنوان و iframe
-  const title = document.createElement('h6');
-  title.textContent = video.title;
-  box.appendChild(title);
-
   const iframe = document.createElement('iframe');
   iframe.src = `https://www.youtube.com/embed/${video.id}`;
   iframe.allowFullscreen = true;
   box.appendChild(iframe);
+  container.appendChild(box);
 
-  // إذا كان الادمن، أضف أزرار الحذف والتعديل
+  // أزرار الحذف والتعديل للادمن
   if(isAdmin){
     const buttonsDiv = document.createElement('div');
     buttonsDiv.classList.add('videoButtons');
@@ -302,10 +292,10 @@ function createVideoElement(video, index) {
 
     buttonsDiv.appendChild(editBtn);
     buttonsDiv.appendChild(deleteBtn);
-    box.appendChild(buttonsDiv);
+    container.appendChild(buttonsDiv);
   }
 
-  return box;
+  return container;
 }
 
 // عرض الفيديوهات حسب العدد المرئي
@@ -365,6 +355,8 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
 
 
 
