--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ footer a { color:#1976d2; text-decoration:none; }
   <img src="logo.png" alt="Spoken Arabic Now Logo">
   <div>
     <h1>Spoken Arabic Now</h1>
-    <p>Learn Egyptian Arabic. Speak like real people.</p>
+    <p>Learn Egyptian Arabic and speak like a local.</p>
   </div>
 </header>
 
@@ -355,6 +355,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
